--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="wrapper">
 
-        <h1>Weather App</h1>
+        <h1>My Weather App</h1>
 
         <div class="tab-container">
             <p class="tab" data-userWeather>Your Weather</p>
